--- a/final.html
+++ b/final.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
+            background: linear-gradient(to right, #7338b3, #2f00ff);
             color: #fff;
             text-align: center;
             padding: 50px;
@@ -41,7 +41,7 @@
         }
 
         h2 {
-            color: #ffeb3b;
+            color: #ffa33b;
             margin-top: 0;
         }
 
@@ -54,7 +54,7 @@
             display: inline-block;
             margin-top: 10px;
             padding: 10px 15px;
-            background-color: #ffeb3b;
+            background-color: #00ffd5;
             color: #333;
             font-weight: bold;
             border-radius: 6px;
@@ -63,7 +63,7 @@
         }
 
         a:hover {
-            background-color: #ffc107;
+            background-color: #ffee00;
             transform: scale(1.05);
         }
 
@@ -87,7 +87,7 @@
         <div class="work">
             <h2>練習2</h2>
             <p>描述：練習2 背景</p>
-            <a href="work-CSS.html">點此查看</a>
+            <a href="bg2.html">點此查看</a>
         </div>
         <div class="work">
             <h2>練習3</h2>
